// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label This is an error message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable gux-error" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-describedby="gux-error-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
  <span slot="error" id="gux-error-i">
    This is an error message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label This is a help message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" aria-describedby="gux-help-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
  <span slot="help" id="gux-help-i">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label 
      This is some tooltip text
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
  <gux-label-info-beta slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-dropdown indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when indicator-mark is "required" 1`] = `
<gux-form-field-dropdown indicator-mark="required">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when input attribute is "disabled" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi disabled="" role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup disabled="">
          <div class="gux-target-container gux-target-container-not-filterable gux-disabled" slot="target">
            <button type="button" class="gux-field gux-field-button" disabled="" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when input attribute is "required" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label Required
      </legend>
      <div class="gux-form-field-visual-label gux-above gux-required" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required" required="">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi required="" role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when label-position is above 1`] = `
<gux-form-field-dropdown label-position="above">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when label-position is beside 1`] = `
<gux-form-field-dropdown label-position="beside">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-beside">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-beside" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render multi select dropdown as expected when label-position is screenreader 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-screenreader" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown-multi role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <div class="gux-dropdown-container">
        <gux-popup>
          <div class="gux-target-container gux-target-container-not-filterable" slot="target">
            <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
              <span class="gux-field-content">
                <span class="gux-placeholder">
                  Select...
                </span>
              </span>
              <gux-icon class="gux-expand-icon" size="small" screenreader-text="Dropdown" iconname="custom/chevron-down-small-regular">
              </gux-icon>
            </button>
          </div>
          <div slot="popup" class="gux-listbox-container">
            <slot>
            </slot>
          </div>
        </gux-popup>
      </div>
    </template>
    <gux-listbox-multi aria-labelledby="gux-label-i" role="listbox" aria-multiselectable="true" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
        <slot name="create">
        </slot>
      </template>
      <gux-option-multi value="a" disabled="" id="gux-option-multi-i" role="option" class="gux-disabled" aria-selected="false" aria-disabled="true">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option-multi>
      <gux-option-multi value="b" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option-multi>
      <gux-option-multi value="c" id="gux-option-multi-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <svg class="gux-checkbox-container" xmlns="http://www.w3.org/2000/svg" viewBox="1 1 13 13">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.5H4C3.17157 2.5 2.5 3.17157 2.5 4V11C2.5 11.8284 3.17157 12.5 4 12.5H11C11.8284 12.5 12.5 11.8284 12.5 11V4C12.5 3.17157 11.8284 2.5 11 2.5ZM4 1C2.34315 1 1 2.34315 1 4V11C1 12.6569 2.34315 14 4 14H11C12.6569 14 14 12.6569 14 11V4C14 2.34315 12.6569 1 11 1H4Z">
            </path>
          </svg>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label This is an error message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable gux-error" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" aria-describedby="gux-error-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
  <span slot="error" id="gux-error-i">
    This is an error message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label This is a help message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" aria-describedby="gux-help-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
  <span slot="help" id="gux-help-i">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label 
      This is some tooltip text
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
  <gux-label-info-beta slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-dropdown indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when indicator-mark is "required" 1`] = `
<gux-form-field-dropdown indicator-mark="required">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when input attribute is "disabled" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown disabled="" role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup disabled="">
        <div class="gux-target-container-not-filterable gux-disabled" slot="target">
          <button type="button" class="gux-field gux-field-button" disabled="" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when input attribute is "required" 1`] = `
<gux-form-field-dropdown>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label Required
      </legend>
      <div class="gux-form-field-visual-label gux-above gux-required" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required" required="">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown required="" role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when label-position is above 1`] = `
<gux-form-field-dropdown label-position="above">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when label-position is beside 1`] = `
<gux-form-field-dropdown label-position="beside">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-beside">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-beside" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-dropdown #render should render single select dropdown as expected when label-position is screenreader 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-screenreader-label">
        Label
      </legend>
      <div class="gux-form-field-visual-label gux-screenreader" role="presentation">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot>
          </slot>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-dropdown role="combobox">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <gux-popup>
        <div class="gux-target-container-not-filterable" slot="target">
          <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
            </gux-icon>
          </button>
        </div>
        <slot slot="popup">
        </slot>
      </gux-popup>
    </template>
    <gux-listbox aria-labelledby="gux-label-i" role="listbox" tabindex="0">
      <template shadowrootmode="open">
        <slot>
        </slot>
      </template>
      <gux-option value="a" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label slot="label" id="gux-label-i">
    Label
  </label>
</gux-form-field-dropdown>
`;
